[project]
name = "ethpandaops-python"
version = "0.1.0"
description = "Collection of queries to access Xatu data"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "clickhouse_connect>=0.7.2",
    "python-dotenv>=1.0.1",
    "panel>=1.3.8",
    "diskcache>=5.6.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ethpandaops_python"]
