[project]
name = "ethpandaops-python"
version = "0.2.0"
description = "Collection of queries to access Xatu data"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "clickhouse_connect>=0.7.2",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.2",
    "pandas>=2.2.1",
    "ipykernel>=6.29.4",
    "polars>=0.20.19",
    "hypersync>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ethpandaops_python"]
