[project]
name = "ethpandaops-python"
version = "0.7.0"
description = "Collection of pipelines to analyze Ethereum blob inclusion rates built with Xatu and Hypersync"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "clickhouse_connect>=0.7.2",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.2",
    "pandas>=2.2.1",
    "polars==0.20.31",
    "hypersync==0.7.3",
    "nest_asyncio>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ethpandaops_python"]
